fix: bump tooltip z-index to a much higher value using layers vars, flatten DOM (#1312)
fix: bump tooltip z-index to a much higher value using layers vars, flatten DOM
* Add story to highlight z-index differences
* Flatten tooltip DOM to create a more predictable stacking context
* Fixed typo in file name

--- a/draft-packages/tooltip/KaizenDraft/Tooltip/Tooltip.scss
+++ b/draft-packages/tooltip/KaizenDraft/Tooltip/Tooltip.scss
@@ -4,6 +4,7 @@
 @import "~@kaizen/design-tokens/sass/variable-identifiers";
 @import "~@kaizen/deprecated-component-library-helpers/styles/type";
 @import "~@kaizen/component-library/styles/animation";
+@import "~@kaizen/component-library/styles/layers";
 
 // Sync with Tooltip.tsx
 $arrow-height: 10px;
@@ -16,14 +17,15 @@ $dt-tooltip-content-border: var(
 );
 
 .tooltip {
+  position: relative; // Make this a positioned element so z-index works. (Note: Popper overrides this to absolute.)
   pointer-events: none;
+  z-index: $ca-z-index-tooltip;
 }
 
 .tooltipContent {
   border-radius: $kz-var-border-solid-border-radius;
   transition: opacity $ca-duration-fast, transform $ca-duration-fast;
   padding: $ca-grid / 2 $ca-grid / 2;
-  z-index: 2;
   border: $kz-var-border-solid-border-width $kz-var-border-solid-border-style
     $dt-tooltip-content-border;
   box-shadow: $kz-var-shadow-small-box-shadow;
@@ -40,7 +42,9 @@ $dt-tooltip-content-border: var(
 }
 
 .arrow {
-  z-index: 2;
+  // Ensure the arrow always sits on top of the tooltipContent
+  z-index: 1;
+
   // This is required by popper, otherwise positioning issues will exist.
   // https://github.com/popperjs/react-popper/issues/354#issuecomment-616540651
   position: absolute;
@@ -78,7 +82,6 @@ $dt-tooltip-content-border: var(
 .arrowWhite::after {
   border-top: $arrow-height solid white;
   margin-top: -2px;
-  z-index: 2;
 }
 
 .arrowShadow::before {
@@ -91,7 +94,6 @@ $dt-tooltip-content-border: var(
     rgba($kz-var-color-wisteria-800-rgb-params, 0.09);
   margin-top: 1px;
   filter: blur(4px);
-  z-index: 2;
 }
 
 .displayInline {
